k8s-manifests/02-security/allow-openshift-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-ingress
  namespace: demo
spec:
  podSelector:
    matchLabels:
      app: demo-frontend # El label de tu pod de Nginx/Frontend
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: ingress
    ports:
    - protocol: TCP
      port: 8080 # O el puerto que use tu contenedor de frontend
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-tekton-listener-from-ingress
  namespace: demo
spec:
  podSelector:
    matchLabels:
      # Este es el label que Tekton le pone automáticamente a sus pods de escucha
      eventlistener: web-build-listener 
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: ingress
    ports:
    - protocol: TCP
      port: 8080
